[workspace]
resolver = "2"
members = [
    "crates/pulsate",
    "crates/pulsate-core",
    "crates/pulsate-rt",
    "crates/pulsate-util",
    "crates/pulsate-flow",
    "crates/pulsate-config",
    "crates/pulsate-net",
    "crates/pulsate-tls",
    "crates/pulsate-http",
    "crates/pulsate-http3",
    "crates/pulsate-router",
    "crates/pulsate-pipeline",
    "crates/pulsate-proxy",
    "crates/pulsate-cache",
    "crates/pulsate-waf",
    "crates/pulsate-control",
    "crates/pulsate-acme",
    "crates/pulsate-cluster",
    "crates/pulsate-secrets",
    "crates/pulsate-observe",
    "crates/pulsate-plugin",
    "crates/pulsate-sdk",
    "crates/pulsate-dashboard",
    "crates/pulsate-cli",
    "crates/pulsate-migrate",
    "crates/pulsate-k8s",
    "crates/pulsate-test",
    "xtask",
]

# Single source of truth for shared package metadata. Member crates inherit via
# `version.workspace = true` etc. so versions never drift (docs/03-repository.md).
[workspace.package]
version = "0.2.2"
edition = "2021"
rust-version = "1.86"
license = "Apache-2.0"
repository = "https://github.com/squaretick/pulsate"

# Shared dependency versions, declared once and inherited with `dep.workspace = true`.
[workspace.dependencies]
# Internal crates (path deps) — versions inherited via `dep.workspace = true`.
pulsate-acme = { path = "crates/pulsate-acme", version = "0.2.2" }
pulsate-cache = { path = "crates/pulsate-cache", version = "0.2.2" }
pulsate-cli = { path = "crates/pulsate-cli", version = "0.2.2" }
pulsate-cluster = { path = "crates/pulsate-cluster", version = "0.2.2" }
pulsate-config = { path = "crates/pulsate-config", version = "0.2.2" }
pulsate-control = { path = "crates/pulsate-control", version = "0.2.2" }
pulsate-core = { path = "crates/pulsate-core", version = "0.2.2" }
pulsate-dashboard = { path = "crates/pulsate-dashboard", version = "0.2.2" }
pulsate-flow = { path = "crates/pulsate-flow", version = "0.2.2" }
pulsate-http = { path = "crates/pulsate-http", version = "0.2.2" }
pulsate-http3 = { path = "crates/pulsate-http3", version = "0.2.2" }
pulsate-k8s = { path = "crates/pulsate-k8s", version = "0.2.2" }
pulsate-migrate = { path = "crates/pulsate-migrate", version = "0.2.2" }
pulsate-net = { path = "crates/pulsate-net", version = "0.2.2" }
pulsate-observe = { path = "crates/pulsate-observe", version = "0.2.2" }
pulsate-pipeline = { path = "crates/pulsate-pipeline", version = "0.2.2" }
pulsate-plugin = { path = "crates/pulsate-plugin", version = "0.2.2" }
pulsate-proxy = { path = "crates/pulsate-proxy", version = "0.2.2" }
pulsate-router = { path = "crates/pulsate-router", version = "0.2.2" }
pulsate-rt = { path = "crates/pulsate-rt", version = "0.2.2" }
pulsate-sdk = { path = "crates/pulsate-sdk", version = "0.2.2" }
pulsate-secrets = { path = "crates/pulsate-secrets", version = "0.2.2" }
pulsate-test = { path = "crates/pulsate-test", version = "0.2.2" }
pulsate-tls = { path = "crates/pulsate-tls", version = "0.2.2" }
pulsate-util = { path = "crates/pulsate-util", version = "0.2.2" }
pulsate-waf = { path = "crates/pulsate-waf", version = "0.2.2" }
pulsate = { path = "crates/pulsate", version = "0.2.2" }
# External, third-party deps used across the workspace are pinned here.
tokio = { version = "1", default-features = false }
bytes = "1"
http = "1"
thiserror = "2"
tracing = "0.1"
anyhow = "1"
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", default-features = false, features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", default-features = false, features = [
    "tokio",
    "server",
    "server-auto",
    "client",
    "client-legacy",
    "http1",
    "http2",
] }
http-body-util = "0.1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
socket2 = { version = "0.5", features = ["all"] }

# Workspace-wide lint policy (docs/03-repository.md: coding standards). Members opt
# in with `[lints] workspace = true`. Kept as `warn` so scaffold builds stay green;
# CI escalates fmt/clippy/deny to gates.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Curated allow-list: noise that fights the house style more than it helps.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Doc prose mentions units/numbers (10MB, 10_000_000) and product names freely;
# requiring backticks on every one fights readability more than it helps.
doc_markdown = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

# Thin, fast release profile knobs. Allocator + LTO tuning lands with the perf
# milestone (docs/10-performance.md); kept conservative here.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
