[package]
name = "pulsate-acme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ACME plumbing: HTTP-01 challenge store, dynamic (live-updatable) certificate store, on-demand allow-list."

[dependencies]
pulsate-core = { path = "../pulsate-core", version = "0.1.0" }
pulsate-tls = { path = "../pulsate-tls", version = "0.1.0" }
rustls.workspace = true

# JOSE / ACME account crypto (RFC 8555, RFC 7515/7518/7638).
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pkcs8", "pem", "std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
base64ct = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rcgen = "0.13"

[lints]
workspace = true
