[package]
name = "pulsate-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Implementations of the `pulsate` subcommands (kept here so the binary stays thin and the CLI is testable)."

[dependencies]
pulsate-core = { path = "../pulsate-core", version = "0.2.2" }
pulsate-config = { path = "../pulsate-config", version = "0.2.2" }
pulsate-router = { path = "../pulsate-router", version = "0.2.2" }
pulsate-net = { path = "../pulsate-net", version = "0.2.2" }
pulsate-http = { path = "../pulsate-http", version = "0.2.2" }
pulsate-tls = { path = "../pulsate-tls", version = "0.2.2" }
pulsate-control = { path = "../pulsate-control", version = "0.2.2" }
pulsate-waf = { path = "../pulsate-waf", version = "0.2.2" }
pulsate-http3 = { path = "../pulsate-http3", version = "0.2.2" }
pulsate-plugin = { path = "../pulsate-plugin", version = "0.2.2" }
pulsate-migrate = { path = "../pulsate-migrate", version = "0.2.2" }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "net",
    "io-util",
] }

[lints]
workspace = true
