[package]
name = "pulsate-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Implementations of the `pulsate` subcommands (kept here so the binary stays thin and the CLI is testable)."

[dependencies]
pulsate-core.workspace = true
pulsate-config.workspace = true
pulsate-router.workspace = true
pulsate-net.workspace = true
pulsate-http.workspace = true
pulsate-tls.workspace = true
pulsate-control.workspace = true
pulsate-waf.workspace = true
pulsate-http3.workspace = true
pulsate-plugin.workspace = true
pulsate-migrate.workspace = true
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "net",
    "io-util",
] }

[lints]
workspace = true
