[package]
name = "pulsate-cluster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Clustering: membership, leader/peer roles, shared state."

[dependencies]
pulsate-core = { path = "../pulsate-core", version = "0.2.2" }
tokio = { version = "1", features = ["net", "time", "rt", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["use-std"] }

[dev-dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "time",
    "rt",
    "sync",
    "macros",
] }

[lints]
workspace = true
