[package]
name = "pulsate-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed config model, snapshot build, validation, and the arc-swap-published config store."

[dependencies]
pulsate-core = { path = "../pulsate-core", version = "0.2.2" }
pulsate-flow = { path = "../pulsate-flow", version = "0.2.2" }
pulsate-router = { path = "../pulsate-router", version = "0.2.2" }
pulsate-proxy = { path = "../pulsate-proxy", version = "0.2.2" }
pulsate-pipeline = { path = "../pulsate-pipeline", version = "0.2.2" }
pulsate-cache = { path = "../pulsate-cache", version = "0.2.2" }
pulsate-waf = { path = "../pulsate-waf", version = "0.2.2" }
arc-swap.workspace = true

[lints]
workspace = true
