[package]
name = "pulsate-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed config model, snapshot build, validation, and the arc-swap-published config store."

[dependencies]
pulsate-core.workspace = true
pulsate-flow.workspace = true
pulsate-router.workspace = true
pulsate-proxy.workspace = true
pulsate-pipeline.workspace = true
pulsate-cache.workspace = true
pulsate-waf.workspace = true
arc-swap.workspace = true

[lints]
workspace = true
