[package]
name = "pulsate-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Control-plane orchestrator and REST admin API (token auth + RBAC, loopback by default)."

[dependencies]
pulsate-core.workspace = true
pulsate-config.workspace = true
pulsate-http.workspace = true
pulsate-waf.workspace = true
pulsate-dashboard.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["net", "rt", "sync", "macros", "time"] }
tonic = "0.12"
prost = "0.13"
tokio-stream = { version = "0.1", features = ["net", "sync"] }

[build-dependencies]
tonic-build = "0.12"
# Vendored protoc so the build needs no system `protoc` — keeps CI, `cargo
# install`, and the "one binary, no deps" promise self-contained.
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "time"] }
pulsate-proxy.workspace = true
pulsate-router.workspace = true

[lints]
workspace = true
