[package]
name = "pulsate-flow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The Flow configuration language: hand-written lexer, recursive-descent parser, typed AST, span-accurate diagnostics."

[dependencies]
pulsate-core = { path = "../pulsate-core", version = "0.2.1" }
pulsate-util = { path = "../pulsate-util", version = "0.2.1" }

[lints]
workspace = true
