[package]
name = "pulsate-flow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The Flow configuration language: hand-written lexer, recursive-descent parser, typed AST, span-accurate diagnostics."

[dependencies]
pulsate-core.workspace = true
pulsate-util.workspace = true

[lints]
workspace = true
