[package]
name = "pulsate-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP/1.1 serving over hyper: normalize to Request/Response and execute terminal handlers."

[dependencies]
pulsate-core.workspace = true
pulsate-rt.workspace = true
pulsate-router.workspace = true
pulsate-proxy.workspace = true
pulsate-pipeline.workspace = true
pulsate-observe.workspace = true
pulsate-cache.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "io-util"] }

[lints]
workspace = true
