[package]
name = "pulsate-http3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP/3 over QUIC."

[dependencies]
pulsate-core.workspace = true
pulsate-tls.workspace = true
pulsate-http.workspace = true
pulsate-router.workspace = true
pulsate-pipeline.workspace = true
pulsate-proxy.workspace = true
pulsate-cache.workspace = true
pulsate-observe.workspace = true

http.workspace = true
bytes.workspace = true
rustls.workspace = true
tokio = { workspace = true, features = ["rt", "net", "macros", "time", "sync"] }

# QUIC transport + HTTP/3 framing. Pinned as a mutually compatible set:
# h3-quinn 0.0.10 bridges h3 0.0.8 onto quinn 0.11 (quinn-proto 0.11.15), which
# uses rustls 0.23 — matching the workspace rustls pin.
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls-ring",
] }
h3 = "0.0.8"
h3-quinn = "0.0.10"

[dev-dependencies]
rcgen = "0.13"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
