[package]
name = "pulsate-k8s"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Kubernetes Gateway API controller: reconciles GatewayClass/Gateway/HTTPRoute into a live pulsate-config snapshot via the same atomic-swap path as admin reload."

[dependencies]
pulsate-config = { path = "../pulsate-config", version = "0.2.1" }

# Kubernetes client + controller runtime. A resolvable pair: kube 0.95 targets
# k8s-openapi 0.23, and the `v1_31` feature picks the matching API surface.
kube = { version = "0.95", default-features = false, features = ["runtime", "derive", "client", "rustls-tls"] }
k8s-openapi = { version = "0.23", features = ["v1_31", "schemars"] }
schemars = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "time", "signal"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }

[lints]
workspace = true
