[package]
name = "pulsate-migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Config importers: nginx / Caddy / HAProxy / Apache → Flow, with a fidelity report."

[dependencies]

[dev-dependencies]
pulsate-flow.workspace = true

[lints]
workspace = true
