[package]
name = "pulsate-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Listeners, socket options (SO_REUSEPORT), connection limits, accept loop, graceful drain."

[dependencies]
pulsate-core = { path = "../pulsate-core", version = "0.2.1" }
pulsate-rt = { path = "../pulsate-rt", version = "0.2.1" }
tokio = { workspace = true, features = ["net", "sync", "time", "rt", "macros"] }
socket2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-util"] }

[lints]
workspace = true
