[package]
name = "pulsate-observe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Observability: Prometheus metrics + exposition, request IDs, structured JSON access logs."

[dependencies]
pulsate-core.workspace = true

[lints]
workspace = true
