[package]
name = "pulsate-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Middleware engine (Ingress/Egress) and built-in middleware: strip_prefix, headers, cors."

[dependencies]
pulsate-core.workspace = true
pulsate-waf.workspace = true
http.workspace = true

[lints]
workspace = true
