[package]
name = "pulsate-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Routing table + matchers (host/path/regex/method/weighted)."

[dependencies]
pulsate-core = { path = "../pulsate-core", version = "0.2.1" }
pulsate-pipeline = { path = "../pulsate-pipeline", version = "0.2.1" }
pulsate-cache = { path = "../pulsate-cache", version = "0.2.1" }

[lints]
workspace = true
