[package]
name = "pulsate-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Routing table + matchers (host/path/regex/method/weighted)."

[dependencies]
pulsate-core.workspace = true
pulsate-pipeline.workspace = true
pulsate-cache.workspace = true

[lints]
workspace = true
