[package]
name = "pulsate-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Secrets backends: environment and file (Vault / cloud KMS to follow)."

[dependencies]
pulsate-core = { path = "../pulsate-core", version = "0.2.2" }

[lints]
workspace = true
