[package]
name = "pulsate-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Secrets backends: environment and file (Vault / cloud KMS to follow)."

[dependencies]
pulsate-core.workspace = true

[lints]
workspace = true
