[package]
name = "pulsate-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Test harness, fakes, conformance utilities."

[dependencies]
pulsate-core = { path = "../pulsate-core", version = "0.2.2" }

[lints]
workspace = true
