[package]
name = "pulsate-waf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WAF signatures, rate limiting, IP allow/deny (CIDR), and a tamper-evident audit log."

[dependencies]
pulsate-core.workspace = true

[lints]
workspace = true
